# wall-e

./: .gitignore  .gitmodules  Makefile  README.md
brain/: Makefile  camera.py  main.c  serial.c  serial.h  state.c  state.h  utils.c  utils.h
docs/: paper.md  present.md
driver/: .clang-format  .clangd  CMakeLists.txt  README.md  main.c  motor.c  motor.h  pico_sdk_import.cmake  ultrasonic.c  ultrasonic.h  utils.c  utils.h
